@@ -14,6 +14,9 @@ int file_chown(const char *filename, const char *username, const char *groupname
 
 int file_rename(const char *old_filename, const char *new_filename, wzd_context_t * context);
 
+int file_mkdir(const char *dirname, unsigned int mode, wzd_context_t * context);
+int file_rmdir(const char *dirname, wzd_context_t * context);
+
 /* low-level func */
 int _checkPerm(const char *filename, unsigned long wanted_right, wzd_user_t *user);
 int _setPerm(const char *filename, const char *granted_user, const char *owner, const char *group, const char * rights, wzd_context_t * context);
